[package]
name = "libraildriver"
version = "0.1.0"
authors = ["Lily Hopkins <bsalarius@gmail.com>"]
edition = "2018"
description = "FFI bindings for TS2020's RailDriver.dll"
license = "MIT"
homepage = "https://github.com/Bsalarius/libraildriver"
repository = "https://github.com/Bsalarius/libraildriver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libraildriver-sys = "0.1"
